<resources>
    <string name="app_name">Course-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="no_account">No account</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="register">register</string>
    <string name="log_out">Log Out</string>
    <string name="followed">Followed</string>
    <string name="courses">Courses</string>
    <string name="newcomment">newComment</string>
</resources>