<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/courseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/logout"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="4dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentList"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/followedtext"
        android:layout_width="202dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/followed"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/CourseList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/coursetext"
        android:layout_width="186dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/courses"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/commentList"
        app:layout_constraintEnd_toStartOf="@+id/followedtext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
        android:id="@+id/commentList"
        android:layout_width="219dp"
        android:layout_height="629dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/CourseList"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/CourseList"
        android:layout_width="192dp"
        android:layout_height="631dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>